Bug 305910 - KStars FITS Viewer crash
Summary: KStars FITS Viewer crash
Status: RESOLVED FIXED
Alias: None
Product: kstars
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.0
Platform: Debian testing Linux
: NOR crash
Target Milestone: ---
Assignee: Jasem Mutlaq
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-28 03:59 UTC by Alex Roman
Modified: 2012-08-28 22:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Roman 2012-08-28 03:59:10 UTC
Application: kstars (2.0.0)
KDE Platform Version: 4.8.4 (4.8.4)
Qt Version: 4.8.2
Operating System: Linux 3.2.0-3-amd64 x86_64
Distribution: Debian GNU/Linux testing (wheezy)

-- Information about the crash:
I opened a FITS file that I previously created on Windows using MAXIM DL software. The file is a colour FITS file, not sure of the specifics. I can provide the file if neccessary to track down the problem.

I took a quick look at the backtrace and it might be in libcfitsio...

FYI using latest debian testing, but kstars compiled from git.

The crash can be reproduced every time.

-- Backtrace:
Application: KStars (kstars), signal: Aborted
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fe03c6e4780 (LWP 27349))]

Thread 6 (Thread 0x7fe02788a700 (LWP 27350)):
#0  0x00007fe03705b2d4 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007fe027a993c3 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#2  0x00007fe037056b50 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#3  0x00007fe03734470d in clone () from /lib/x86_64-linux-gnu/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7fe027089700 (LWP 27351)):
#0  0x00007fe03705b2d4 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007fe027a993c3 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#2  0x00007fe037056b50 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#3  0x00007fe03734470d in clone () from /lib/x86_64-linux-gnu/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7fe026888700 (LWP 27352)):
#0  0x00007fe03705b2d4 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007fe027a993c3 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#2  0x00007fe037056b50 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#3  0x00007fe03734470d in clone () from /lib/x86_64-linux-gnu/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7fe026087700 (LWP 27353)):
#0  0x00007fe03705b2d4 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007fe027a993c3 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#2  0x00007fe037056b50 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#3  0x00007fe03734470d in clone () from /lib/x86_64-linux-gnu/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fe022d2a700 (LWP 27354)):
#0  0x00007fe0331f4e6c in clock_gettime () from /lib/x86_64-linux-gnu/librt.so.1
#1  0x00007fe038d78bb4 in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007fe038e4caad in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#3  0x00007fe038e4cdf3 in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007fe038e4b96c in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#5  0x00007fe038e4ba15 in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007fe032f43d0f in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007fe032f443fb in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#8  0x00007fe032f445f4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#9  0x00007fe038e4c2a6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#10 0x00007fe038e1c8cf in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#11 0x00007fe038e1cb58 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#12 0x00007fe038d1fd70 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#13 0x00007fe038dfd1df in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#14 0x00007fe038d22d0b in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#15 0x00007fe037056b50 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#16 0x00007fe03734470d in clone () from /lib/x86_64-linux-gnu/libc.so.6
#17 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fe03c6e4780 (LWP 27349)):
[KCrash Handler]
#5  0x00007fe03729e475 in raise () from /lib/x86_64-linux-gnu/libc.so.6
#6  0x00007fe0372a16f0 in abort () from /lib/x86_64-linux-gnu/libc.so.6
#7  0x00007fe0372d832b in ?? () from /lib/x86_64-linux-gnu/libc.so.6
#8  0x00007fe037358f37 in __fortify_fail () from /lib/x86_64-linux-gnu/libc.so.6
#9  0x00007fe037357df0 in __chk_fail () from /lib/x86_64-linux-gnu/libc.so.6
#10 0x00007fe037357249 in ?? () from /lib/x86_64-linux-gnu/libc.so.6
#11 0x00007fe0372e02b5 in _IO_default_xsputn () from /lib/x86_64-linux-gnu/libc.so.6
#12 0x00007fe0372b0190 in vfprintf () from /lib/x86_64-linux-gnu/libc.so.6
#13 0x00007fe0373572ed in __vsprintf_chk () from /lib/x86_64-linux-gnu/libc.so.6
#14 0x00007fe03735722f in __sprintf_chk () from /lib/x86_64-linux-gnu/libc.so.6
#15 0x00007fe03b3b8313 in ffgcprll () from /usr/lib/x86_64-linux-gnu/libcfitsio.so.3
#16 0x00007fe03b3c5caa in ?? () from /usr/lib/x86_64-linux-gnu/libcfitsio.so.3
#17 0x00007fe03b3bb61b in ffgpxvll () from /usr/lib/x86_64-linux-gnu/libcfitsio.so.3
#18 0x00007fe03b3bb7b5 in ffgpxv () from /usr/lib/x86_64-linux-gnu/libcfitsio.so.3
#19 0x0000000000480d16 in FITSImage::loadFITS (this=0x5c1f050, filename=...) at /home/alex/devel/kde/kstars/kstars/fitsviewer/fitsimage.cpp:224
#20 0x000000000048903d in FITSTab::loadFITS (this=0x5b99f80, imageURL=0x7fff7670ad30) at /home/alex/devel/kde/kstars/kstars/fitsviewer/fitstab.cpp:92
#21 0x00000000004860d6 in FITSViewer::addFITS (this=0x5cc6ba0, imageName=0x7fff7670ad30, mode=FITS_NORMAL) at /home/alex/devel/kde/kstars/kstars/fitsviewer/fitsviewer.cpp:174
#22 0x00000000005cf1f8 in KStars::slotOpenFITS (this=0x2488b10) at /home/alex/devel/kde/kstars/kstars/kstarsactions.cpp:555
#23 0x00000000005cae95 in KStars::qt_static_metacall (_o=0x2488b10, _c=QMetaObject::InvokeMetaMethod, _id=59, _a=0x7fff7670af20) at /home/alex/devel/kde/build/kstars/kstars.moc:244
#24 0x00007fe038e3356f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#25 0x00007fe037f69502 in QAction::triggered(bool) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#26 0x00007fe037f696f0 in QAction::activate(QAction::ActionEvent) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#27 0x00007fe0383a3443 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#28 0x00007fe0383a9759 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#29 0x00007fe039704360 in KMenu::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libkdeui.so.5
#30 0x00007fe037fbee00 in QWidget::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#31 0x00007fe0383aaa0b in QMenu::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#32 0x00007fe037f6f70c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#33 0x00007fe037f743eb in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#34 0x00007fe03964b8a6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#35 0x00007fe038e1db7e in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#36 0x00007fe037f7054b in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#37 0x00007fe037feae6c in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#38 0x00007fe037fe9d31 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#39 0x00007fe038010ba2 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#40 0x00007fe032f44205 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#41 0x00007fe032f44538 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#42 0x00007fe032f445f4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#43 0x00007fe038e4c286 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#44 0x00007fe03801081e in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#45 0x00007fe038e1c8cf in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#46 0x00007fe038e1cb58 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#47 0x00007fe038e21d18 in QCoreApplication::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#48 0x00000000005f6b9c in main (argc=1, argv=0x7fff7670d7a8) at /home/alex/devel/kde/kstars/kstars/main.cpp:199

Reported using DrKonqi
Comment 1 Jasem Mutlaq 2012-08-28 04:52:30 UTC
Can you please either attach the file or send it directly to my email? (mutlaqja at ikarustech dot com)
Comment 2 Jasem Mutlaq 2012-08-28 21:53:35 UTC
Git commit 7b8d948606d0ba62b6f3e4459109f3df70c6fd24 by Jasem Mutlaq.
Committed on 28/08/2012 at 23:45.
Pushed by mutlaqja into branch 'master'.

Fix problem in loading 3D data cubes. KStars does not support loading of color FITS images, however, now it is able to read the first 2D image successfully.

M  +10   -0    kstars/fitsviewer/fitsviewer.cpp

http://commits.kde.org/kstars/7b8d948606d0ba62b6f3e4459109f3df70c6fd24
Comment 3 Jasem Mutlaq 2012-08-28 22:00:34 UTC
This problem is now resolved in KStars. However, KStars FITSViewer does _not_ support color FITS Images. You can file another bug as a wishlist item if you want color FITS support in KStars.