Fix problem in loading 3D data cubes. KStars does not support loading of color FITS images, however, now it is able to read the first 2D image successfully.

BUG:305910